# DynEngine

./: CMakeLists.txt  README.md  dynengine.code-workspace
cmake/: ForceUnicode.cmake  utf8.cmake  windarkmode.cmake
exe/: CMakeLists.txt
exe/include/: CMakeLists.txt  basewindow.h  gui.h  mainwindow.h  version.h.in  winmain.h
exe/src/: CMakeLists.txt  gui.cpp  mainwindow.cpp  winmain.cpp
include/exe/: CMakeLists.txt  gui.h  windows_gui.h  windows_strings.h
include/lib/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt  dynenginelib.h
src/exe/: CMakeLists.txt  gui.cpp  windows_gui.cpp  windows_strings.cpp
src/lib/: CMakeLists.txt  lib.cpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  test.cpp
